Bug 79669 - [BYT Regression ppgtt]igt/gem_exec_bad_domains/conflicting-write-domain fails
Summary: [BYT Regression ppgtt]igt/gem_exec_bad_domains/conflicting-write-domain fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Jesse Barnes
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-05 07:27 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (77.94 KB, text/plain)
2014-06-05 07:27 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-06-05 07:27:04 UTC
Created attachment 100444 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes. 
Good commit on -next-queued: 192155025197cc4765702a180904c3b62c152b7a

Non-working platforms: BYT

==kernel==
--------------------------
origin/drm-intel-nightly: 0a37b5d366831590ebc976018d1bd812ef526a98(fails)
    drm-intel-nightly: 2014y-06m-03d-19h-31m-28s integration manifest
origin/drm-intel-next-queued: 92d7377929140bc120f7742ee3afffcb2a827fe4(fails)
     drm/i915: Simplify intel_gpu_reset
origin/drm-intel-fixes: d23db88c3ab233daed18709e3a24d6c95344117f(fails)
    drm/i915: Prevent negative relocation deltas from wrapping

==Bug detailed description==
-----------------------------
igt/gem_exec_bad_domains/conflicting-write-domain fails

Output:
./gem_exec_bad_domains --run-subtest conflicting-write-domain
IGT-Version: 1.6-g1451df1 (x86_64) (Linux: 3.15.0-rc3_drm-intel-next-queued_06946f_20140605+ x86_64)
Test assertion failure function __real_main153, file gem_exec_bad_domains.c:204:
Last errno: 22, Invalid argument
Failed assertion: run_batch() == 0
Subtest conflicting-write-domain: FAIL

==Reproduce steps==
---------------------------- 
1. ./gem_exec_bad_domains --run-subtest conflicting-write-domain
Comment 1 Guo Jinxian 2014-06-05 07:38:57 UTC
Update result on -fixes
origin/drm-intel-fixes: d23db88c3ab233daed18709e3a24d6c95344117f(works)
    drm/i915: Prevent negative relocation deltas from wrapping
Comment 2 Daniel Vetter 2014-06-06 06:10:31 UTC
Again could be ppgtt, please test with i915.ppgtt_enable=0. If that doesn't fix it please bisect.
Comment 3 Daniel Vetter 2014-06-06 06:12:57 UTC
i915.enable_ppgtt=0 I mean of course. Probably should check out bugzilla before my first coffee ;-)
Comment 4 Guo Jinxian 2014-06-09 02:30:40 UTC
(In reply to comment #2)
> Again could be ppgtt, please test with i915.ppgtt_enable=0. If that doesn't
> fix it please bisect.

Yes, test with i915.ppgtt_enable=0, the result was passed.
Output:
./gem_exec_bad_domains --run-subtest conflicting-write-domain
IGT-Version: 1.6-g18d2130 (x86_64) (Linux: 3.15.0-rc3_drm-intel-next-queued_e4964a_20140608+ x86_64)
Subtest conflicting-write-domain: SUCCESS
Comment 5 Jesse Barnes 2014-06-13 15:33:06 UTC
Please try this patch

http://lists.freedesktop.org/archives/intel-gfx/2014-June/047137.html
Comment 6 Daniel Vetter 2014-06-13 16:53:41 UTC
commit 62942ed7279d3e06dc15ae3d47665eff3b373327
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Fri Jun 13 09:28:33 2014 -0700

    drm/i915/vlv: disable PPGTT on early revs v3


Do you have any production silicon byt machines around? Otherwise testing will lack coverage ...
Comment 7 Guo Jinxian 2014-06-18 05:59:54 UTC
This bug had fixed on latest -nightly.
Output:
root@x-byt06:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./gem_exec_bad_domains --run-subtest conflicting-write-domain
IGT-Version: 1.7-g1b1f4b1 (x86_64) (Linux: 3.15.0-rc8_drm-intel-nightly_fff6c5_20140618+ x86_64)
Subtest conflicting-write-domain: SUCCESS
Comment 8 Elizabeth 2017-10-06 14:37:52 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.